--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,2 @@
 
-link rel="shortcut icon" type="image/x-icon" href="/jay22kar/favicon.png"
+<link rel="shortcut icon" type="image/x-icon" href="/jay22kar/favicon.png">
